// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task-workflow default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: task-workflow
on:
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: gh-workflow-test
        run: projen gh-workflow-test
"
`;

exports[`task-workflow upload artifacts 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: task-workflow
on:
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: gh-workflow-test
        run: projen gh-workflow-test
      - name: Upload artifact
        if: always()
        uses: actions/upload-artifact@v3
        with:
          name: ./artifacts/
          path: ./artifacts/
"
`;
